<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/baseline_table_chart_24"
            android:title="@string/menu_timetable" />
        <item
            android:id="@+id/nav_classDetails"
            android:icon="@drawable/classroom"
            android:title="@string/menu_classDetails" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/attendance"
            android:title="@string/menu_attendance" />
        <item
            android:id="@+id/nav_applyOd"
            android:icon="@drawable/applyod_icon"
            android:title="@string/menu_mailFa" />
        <item
            android:id="@+id/nav_aboutUs"
            android:icon="@drawable/aboutus_icon"
            android:title="@string/menu_aboutUs" />
    </group>
</menu>