<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbg"
    android:orientation="vertical"
    tools:context=".SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/srmIcon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/contentDescription"
            android:padding="20dp"
            android:src="@drawable/srm_icon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:padding="15dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/acme"
            android:text="@string/loginAcademia"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/Cream"
            android:textSize="15sp"
            android:textStyle="italic" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:boxBackgroundColor="@color/box_background"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/baseline_email_24"
            app:startIconTint="#83000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            app:boxBackgroundColor="@color/box_background"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="#83000000"
            app:startIconDrawable="@drawable/baseline_key_24"
            app:startIconTint="#83000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="13dp"
            android:backgroundTint="@color/purple"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <!--<androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_temp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="13dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/login"
            android:textColor="#fff" />-->

    </LinearLayout>

</LinearLayout>