<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".Dashboard"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/appbg"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profileImage"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:scaleType="centerCrop" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_marginTop="15dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="15dp"
                        app:cardUseCompatPadding="true">

                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white">

                            <TableRow
                                android:background="@color/lightGreen"
                                android:gravity="center">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:fontFamily="@font/baloo_bhai"
                                    android:text="@string/studentDetails"
                                    android:textAlignment="center"
                                    android:textAllCaps="true"
                                    android:textSize="18sp" />

                            </TableRow>

                            <TableRow>

                                <TextView
                                    android:id="@+id/stdName"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_margin="8dp"
                                    android:fontFamily="@font/aldrich" />

                            </TableRow>

                            <TableRow>

                                <TextView
                                    android:id="@+id/stdId"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_margin="8sp"
                                    android:fontFamily="@font/aldrich" />

                            </TableRow>

                            <TableRow>

                                <TextView
                                    android:id="@+id/stdRegNo"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_margin="8sp"
                                    android:fontFamily="@font/aldrich" />

                            </TableRow>

                            <TableRow>

                                <TextView
                                    android:id="@+id/stdEmail"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_margin="8sp"
                                    android:fontFamily="@font/aldrich" />

                            </TableRow>

                            <TableRow>

                                <TextView
                                    android:id="@+id/stdInstitution"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_margin="8sp"
                                    android:fontFamily="@font/aldrich"
                                    android:text="@string/institute" />

                            </TableRow>

                            <TableRow>

                                <TextView
                                    android:id="@+id/stdProgram"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_margin="8sp"
                                    android:fontFamily="@font/aldrich"
                                    android:text="@string/program" />

                            </TableRow>

                        </TableLayout>

                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

            </LinearLayout>

        </FrameLayout>

        <ImageView
            android:id="@+id/menu_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/navigation" />

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/lightNavigation"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu" />

</androidx.drawerlayout.widget.DrawerLayout>